# ZKAccess

./: .env.example  .gitignore  JBEIL_ZKML_Integration.md  README.md  README_DETAILED.md  SETUP_GUIDE.md  Zksnark.md  risc.md  test.rs
backend/: requirements.txt
backend/app/: __init__.py  config.py  db.py  models.py  routes.py  security.py
backend/scripts/: seed_demo_users.py
bench/: k6-login.js  run_bench.ps1
deploy/: docker-compose.yml
doc/: QUICK_START.md  README_DETAILED.md  RUST_CHEATSHEET.md
doc1/: HANDOFF.md  SETUP_GUIDE.md  WORLD_INTERVIEW_GUIDE.md  WORLD_Mission.md  copilot-instructions.md  inerviwQns.md  risczero.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json
frontend/src/: App.tsx  Login.tsx  Register.tsx  api.ts
zk/: Cargo.toml
zk/methods/: Cargo.toml  build.rs
zk/methods/guest/: Cargo.toml
zk/methods/guest/src/: main.rs
zk/methods/src/: lib.rs
zk/prover-cli/: Cargo.toml
zk/prover-cli/src/: main.rs
zk/verifier-cli/: Cargo.toml
zk/verifier-cli/src/: main.rs
