[package]
name = "prover-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
risc0-zkvm = "1.0"
methods = { path = "../methods" }
