[package]
name = "verifier-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
risc0-zkvm = "1.2.6"
methods = { path = "../methods" }
